# JPS-Prospect-Aggregate

./: .dockerignore  .env.backup  .env.example  .env.production.example  .git-filter-repo-mailmap.txt  .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURAL_REVIEW.md  CELERY_README.md  CLAUDE.md  CODEBASE_IMPROVEMENTS.md  CODEBASE_IMPROVEMENTS_NEW.md  DEPLOYMENT_CHECKLIST.md  DOCKER_MIGRATION_FIX.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  PRODUCTION_DEPLOYMENT_PLAN.md  README.md  REFACTORING_SUMMARY.md  TECH_DEBT.md  TESTING.md  TEST_SUITE_CHECKLIST.md  VUE_README.md  app.py  check_proposals.py  create_new_db.py  create_scraper_status_table.py  create_tables.py  deploy-production.sh  docker-build.sh  docker-compose.yml  docker-start.ps1  docker-start.sh  docker-test-log.md  entrypoint.sh  import_csv.py  launch.ps1  launch.sh  (+24 more)
.claude/: settings.local.json
.claude/agents/: performance-refactoring-engineer.md  pytest-coverage-guardian.md  python-logic-detective.md  security-threat-analyzer.md  slop-code-eliminator.md
.cursor/rules/: project-rules.mdc
.github/workflows/: ci.yml  deploy.yml
.launcher/: preferences.json
app/: __init__.py  config.py  exceptions.py  models.py
app/api/: __init__.py  admin.py  auth.py  data_sources.py  decisions.py  errors.py  factory.py  llm_processing.py  main.py  proposals.py  prospects.py  routes.py  scrapers.py  tools.py
app/constants/: agency_mapping.py
app/core/: base_scraper.py  config_converter.py  consolidated_scraper_base.py  registry.py  scraper_base.py  scraper_configs.py  specialized_scrapers.py
app/database/: __init__.py  auto_init.py  connection.py  crud.py  download_tracker.py  init_db.py  models.py  session.py  user_db.py  user_models.py
app/middleware/: maintenance.py
app/models/: __init__.py
app/services/: base_llm_service.py  contract_llm_service.py  contract_llm_service.py.backup  contract_mapper_service.py  enhancement_queue.py  enhancement_queue_service.py  file_validation_service.py  iterative_llm_service.py  iterative_llm_service_v2.py  llm_service.py  llm_service_utils.py  optimized_prompts.py  scraper_service.py  set_aside_standardization.py
app/tasks/: __init__.py  celery_app.py  health.py  scrapers.py
app/utils/: README.md  __init__.py  contract_mapping.py  data_retention.py  database_helpers.py  database_initializer.py  db_utils.py  duplicate_prevention.py  enhancement_cleanup.py  ensure_data_sources.py  ensure_super_admin.py  file_processing.py  file_utils.py  llm_utils.py  logger.py  migration_check.py  naics_lookup.py  parsing.py  scraper_cleanup.py  scraper_utils.py  user_utils.py  value_and_date_parsing.py
app/web/: __init__.py  routes.py
backups/: .gitkeep
ci-test/: .actrc  Dockerfile.frontend-test  Dockerfile.python-test  Makefile  README.md  docker-compose.test.yml  test-ci-local.sh
data/: download_timestamps.json  jps_users.db.backup_20240804  raw_data_validation.json
data/processed/: README.md  dhs.csv  doc.csv  doj.csv  dos.csv  dot.csv  hhs.csv  jps_inferred_export.csv  ssa.csv  treasury.csv
data/tracker/: download_timestamps.json
docker/: README.md  backup.sh  cloudflare-tunnel-setup.md  cross-platform-setup.md  deploy.ps1  deploy.sh  docker-build.sh  docker-compose-minimal.yml  docker-start.ps1  docker-start.sh  entrypoint.sh  init-db.sh  maintenance.html  manual-deploy-guide.md  ollama-init.sh  quick-start-windows.ps1  setup-production.md  update-site.ps1
docs/: ARCHITECTURE.md  BACKLOG.md  CELERY_README.md  CODEBASE_IMPROVEMENTS.md  CONTRACT_MAPPING_LLM.md  DATA_MAPPING_GUIDE.md  DOCKER_MIGRATION_FIX.md  MIGRATION_VUE_TO_REACT.md  README.md  SCRAPER_QUIRKS.md  TESTING.md  TEST_FIXES_PENDING.md  TEST_SUITE_CHECKLIST.md  TROUBLESHOOTING.md  VUE_README.md  add later.txt  api.md  backend-architecture.md  canonical_columns.csv  celery_refactoring.md  components.md  data-fetching-migration-guide.md  forecasts.txt  patterns.md  project-structure.md  scraper_architecture.md
docs/archive/: TEST_UPDATE_PLAN.md  react-codebase-optimization.md
docs/archived-migrations/: ARCHIVE_INFO.md  backfill_file_logs.py  infer_missing_data.py
docs/testing/: test_enhancement_skip_display.md
frontend-react/: ERROR_HANDLING_STATUS.md  README.md  TECH_DEBT.md  eslint.config.js  index.html  optimization-implementation-summary.md  package-lock.json  package.json  playwright.config.ts  postcss.config.js  tailwind.config.js  test_queue_frontend.js  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.test.json  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend-react/audit/: App.css  documentation-plan.md  implementation-summary.md  index.css  phase2-summary.md  phase3-summary.md  phase4-summary.md
frontend-react/src/: App.css  App.module.css  App.tsx  index.css  main.tsx  tailwind-output.css
migrations/: MIGRATION_NAMING.md  alembic.ini  alembic_helpers.py  env.py
migrations/versions/: 000_create_base_tables.py  000_create_base_tables.py.old  (+17 more)
scripts/: README.md  __init__.py  add_role_column_to_users.py  add_subtask_id_column.py  analyze_field_coverage.py  analyze_set_asides.py  app_launcher.py  backfill_file_logs.py  backfill_naics_descriptions.py  backup.sh  check_dos_url.py  check_schema.py  check_set_aside_results.py  create_llm_output_table.py  create_missing_tables.py  create_new_db.py  create_super_admin.py  create_tables.py  dependency_checker.py  docker_migration_fix.sh  export_csv.py  export_decisions_for_llm.py  fix_prospect_titles.py  health_check.ps1  health_check.py  import_csv.py  init_business_database.py  init_user_database.py  log_setup.py  migrate_data_directories.py  migrate_to_loguru.py  monitor_scrapers.py  nuclear_reset.ps1  populate_data_sources.py  process_csv.py  process_manager.py  process_ssa_excel.py  promote_to_super_admin.py  rebuild_db.py  repair_migrations.py  (+21 more)
sql/: add_search_indexes.sql  add_search_indexes_sqlite.sql
src/: __init__.py  celery_app.py  config.py  exceptions.py
src/api/: errors.py  (+1 more)
tests/: conftest.py  factories.py  test_duplicate_prevention.py  test_maintenance_mode.py  test_set_aside_processing.py
(+522 files in other folders)
